log/build_2022-10-26_02-57-35/py_sub/stderr.log
/usr/lib/python3/dist-packages/setuptools/command/install.py:34: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  warnings.warn(
  File "/home/omar/repos/Robotics_intro_task/install/py_sub/lib/python3.10/site-packages/py_sub/subscriber.py", line 12
    //re.findall(r'\d+',msg.data)
    ^^
SyntaxError: invalid syntax

